--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="tab_text_3">02/03</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="action_settings">Settings</string>
+
+    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
+    <string name="default_notification_channel_name" translatable="true">Call</string>
 </resources>
